# how-computer-systems-rust-work

./: .gitignore  Makefile  README.md
chapters/advanced/: README.md  game-cheats-memory.md  lru-implementation.md
chapters/compilation/: README.md  compile-vs-runtime.md  cross-compilation.md  internals.md  optimization-deep-dive.md  optimization-detailed.md  pipeline.md
chapters/hardware/: README.md  cache-line-size.md  machine-word-cache.md  register-size.md  registers-cache.md  spatial-locality.md  threads-cores.md
chapters/memory/: README.md  address-embedding.md  address-visualization.md  array-indexing.md  memory-access-walkthrough.md  memory-protection-sizes.md  prefetching-swapping.md  segmentation.md  stack-growth.md  stack-size.md  swap-file.md
chapters/operating-system/: README.md  disk-loading.md  internals.md  threads-processes.md
chapters/rust-features/: README.md  bit-masking.md  bit-operations.md  error-handling.md  iterator-collect.md  raw-pointers-safety.md  rc-immutable-refs.md  refcell-mutable-refs.md  result-guide.md  smart-pointers.md  static-struct.md
code/: Cargo.toml
